Extract generation into a function

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "commands": [
       {
         "command": "theminator-theme-generator.toggleGenerateThemePanel",
-        "title": "Toggle Theme Generator Panel"
+        "title": "Theminator: Toggle"
       }
     ]
   },
