Stricten up code requirements
Linter rules, compiler rules, formatting rules

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
@@ -34,8 +35,11 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "@vscode/test-electron": "^2.2.0"
   }
