--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,14 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
+    ],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
     ],
     "rules": {
         "@typescript-eslint/naming-convention": "warn",
