--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "categories": [
     "Other"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/walles/theminator"
+  },
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -25,7 +29,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "package": "vsce package --no-git-tag-version --no-update-package-json 99.99.99"
   },
   "devDependencies": {
     "@types/vscode": "^1.75.0",
@@ -41,6 +46,7 @@
     "mocha": "^10.1.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
+    "@vscode/vsce": "^2.18.0",
     "@vscode/test-electron": "^2.2.0"
   }
 }
